# shortly

./: .gitignore  Dockerfile  LICENSE  README.md  env.example  pyproject.toml  skaffold.yaml
.github/workflows/: python-app.yml
alembic/migrations/: env.py
chart/: Chart.yaml
chart/templates/: deployments.yaml  job.yaml  pv.yaml  pvc.yaml  svc.yaml
chart/values/: local.yaml
scripts/: entrypoint.sh
shortly/app/: __init__.py  events.py  main.py  signals.py
shortly/app/adapters/alembic/migrations/: env.py
shortly/app/adapters/sqlalchemy/: __init__.py
shortly/app/config/: __init__.py  base.py
shortly/app/entrypoints/http/fastapi/: main.py  middlewares.py  signals.py
shortly/app/infra/db/: __init__.py
tests/unit/: test_example.py
